Atualização de API e página principal

--- a/Projetos/Clone-Netflix-melhorado/assets/css/main.css
+++ b/Projetos/Clone-Netflix-melhorado/assets/css/main.css
@@ -5,7 +5,7 @@
 
 
 
-.fundo-teste{
+/* .fundo-teste{
     background: linear-gradient(rgba(0, 0, 0, 0.8),rgba(0, 0, 0, 0.8)) ,url('../img/fundoteste.jpg');
     background-size: cover;
-}
+} */
